[package]
name = "kaijutsu-server"
version.workspace = true
edition.workspace = true
description = "SSH + Cap'n Proto server for kaijutsu"

[dependencies]
kaijutsu-kernel.workspace = true
kaijutsu-crdt.workspace = true
kaijutsu-types.workspace = true
kaijutsu-index = { path = "../kaijutsu-index" }
kaijutsu-telemetry.workspace = true
kaish-kernel.workspace = true

capnp.workspace = true
capnp-rpc.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
russh.workspace = true
log.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
anyhow.workspace = true
shellexpand.workspace = true
async-trait.workspace = true
rand.workspace = true
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Scripting
rhai.workspace = true
kaijutsu-rhai.workspace = true

# Hostname detection
hostname = { workspace = true }

[build-dependencies]
capnpc.workspace = true

[dev-dependencies]
kaijutsu-client.workspace = true
kaijutsu-kernel = { workspace = true, features = ["test-mock"] }
kaijutsu-types.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }
