[package]
name = "kaijutsu-server"
version.workspace = true
edition.workspace = true
description = "SSH + Cap'n Proto server for kaijutsu"

[dependencies]
kaijutsu-kernel.workspace = true
kaijutsu-crdt.workspace = true
kaijutsu-types.workspace = true
kaijutsu-index = { path = "../kaijutsu-index" }
kaijutsu-telemetry.workspace = true
kaijutsu-abc.workspace = true
kaish-kernel.workspace = true

capnp.workspace = true
capnp-rpc.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
russh.workspace = true
russh-sftp.workspace = true
bytes = "1"
log.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
anyhow.workspace = true
shellexpand.workspace = true
async-trait.workspace = true
rand.workspace = true
rand_v10 = { package = "rand", version = "0.10" }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Hostname detection
hostname = { workspace = true }

# ALSA sequencer MIDI-out render target (docs/tracks.md Stage 3 / midi.md M1).
# Linux-only; the server is a Linux daemon. Pinned to the version already in the
# tree (via bevy_audio/cpal) so the lockfile stays single-version.
[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.9"

[build-dependencies]
capnpc.workspace = true

[dev-dependencies]
kaijutsu-client.workspace = true
kaijutsu-kernel = { workspace = true, features = ["test-mock"] }
kaijutsu-types.workspace = true
kaijutsu-hyoushigi = { workspace = true, features = ["test-util"] }
futures.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = { workspace = true }
