[package]
name = "kaijutsu-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared identity and block types for Kaijutsu — the relational foundation"

[dependencies]
# UUID (v5 = deterministic, v7 = time-ordered)
uuid = { version = "1", features = ["v5", "v7", "serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["use-std"] }

# Error types
thiserror = "2"

# Enum string conversion
strum = { version = "0.26", features = ["derive"] }
