[package]
name = "kaijutsu-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared identity and block types for Kaijutsu — the relational foundation"

[dependencies]
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
kaish-types = { path = "../../../kaish/crates/kaish-types" }
thiserror = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
